# docs/swagger.yaml
@@ -58,7 +58,33 @@ definitions:
 info:
   contact: {}
 paths:
-  /auth/refresh:
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user and return tokens
+      parameters:
+      - description: User credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.AuthenticatedUser'
+        "401":
+          description: unauthorized
+          schema:
+            type: string
+      summary: Authenticate user
+      tags:
+      - auth
+  /api/v1/auth/refresh:
     post:
       consumes:
       - application/json
@@ -84,7 +110,7 @@ paths:
       summary: Refresh JWT token
       tags:
       - auth
-  /auth/register:
+  /api/v1/auth/register:
     post:
       consumes:
       - application/json
@@ -108,32 +134,6 @@ paths:
           schema:
             type: string
       summary: Register a new user
-      tags:
-      - auth
-  /auth/tokens:
-    post:
-      consumes:
-      - application/json
-      description: Login user and return tokens
-      parameters:
-      - description: User credentials
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.AuthenticatedUser'
-        "401":
-          description: unauthorized
-          schema:
-            type: string
-      summary: Authenticate user
       tags:
       - auth
 swagger: "2.0"
